# swe-hw2-backend

./: .pre-commit-config.yaml  README.md  pyproject.toml  sonar-project.properties
.github/workflows/: on_push.yml
src/: database.py  main.py  models.py
src/models/: leave_requests.py  users.py
src/routers/: leave_requests.py  users.py
src/schemas/: leave_requests.py  users.py
src/services/: base.py  leave_requests.py  users.py
src/tests/: test_leave_requests.py  test_users.py
src/utils/: hasher.py  time_calc.py
